# open-tower-defense

./: .env  .env.example  .gitignore  RECAP.md
.github/workflows/: deploy-frontend.yml
backend/: .gitignore  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 770aaf4937d3_new_db.py  a1b2c3d4e5f6_seed_towers_and_enemies.py  b2c3d4e5f6a7_seed_users_and_scores.py  c3d4e5f6a7b8_rebalance_stats.py  d4e5f6a7b8c9_enable_rls.py  e5f6a7b8c9d0_enable_rls_all_public.py  f6a7b8c9d0e1_add_game_session_table.py
backend/app/auth/: router.py  schemas.py  service.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/database/: __init__.py  session.py
backend/app/game/: router.py  schemas.py  service.py  session_store.py
backend/app/leaderboard/: router.py  schemas.py  service.py
backend/app/models/: __init__.py  enemy.py  game_session.py  score.py  token.py  tower.py  user.py
backend/app/reference/: router.py  schemas.py  service.py
backend/database/: db.py
frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  client.ts  game.ts  leaderboard.ts  reference.ts
frontend/src/components/auth/: AuthView.tsx
frontend/src/components/game/: GameGrid.tsx  GameView.tsx  HUD.tsx  PixelSprite.tsx  TowerPanel.tsx  WaveResultModal.tsx
frontend/src/components/menu/: MenuView.tsx
frontend/src/store/: AppContext.tsx  reducer.ts
frontend/src/types/: index.ts
(+7 files in other folders)
