[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Yuta1409",email = "yroger2003@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "supabase (>=2.28.3,<3.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "sqlmodel (>=0.0.37,<0.0.38)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "alembic (>=1.18.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
