[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Yuta1409"]
packages = [
    { include = "app" },
    { include = "alembic" },
    { include = "main.py" },
]

[tool.poetry.dependencies]
fastapi = { extras = ["standard"], version = ">=0.135.2,<0.136.0" }
supabase = { version = ">=2.28.3,<3.0.0" }
psycopg2 = { version = ">=2.9.11,<3.0.0" }
sqlmodel = { version = ">=0.0.37,<0.0.38" }
python-dotenv = { version = ">=1.2.2,<2.0.0" }
alembic = { version = ">=1.18.4,<2.0.0" }
bcrypt = { version = ">=4.0.1,<5.0.0" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
